@@ -1,3 +1,11 @@
+2008-03-20  Ian Jackson  <ian@davenant.greenend.org.uk>
+
+	* src/main.h (pkgadminfile): Move prototype to ...
+	* lib/dpkg-db.h: ... here.
+	* src/help.c (pkgadminfile): Move function definition to ...
+	* lib/dbmodify.c: ... here.
+	* src/query.c (pkgadminfile): Remove duplicated functions.
+
 2008-03-20  Ian Jackson  <ian@davenant.greenend.org.uk>,
             Guillem Jover  <guillem@debian.org>
 
